# torch_nupu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  fetch.cmake  pyproject.toml  setup.py
cmake/Modules/: FindSYCLToolkit.cmake
src/: CMakeLists.txt  README.md
src/ATen/native/: xpu
src/ATen/native/nupu/: Copy.cpp  P1Ops.cpp  PoneOps.cpp  Resize.cpp
src/ATen/native/nupu/sycl/: Loops.h
src/ATen/nupu/detail/: XPUHooks.cpp
src/c10/: xpu
src/c10/nupu/: CMakeLists.txt  XPUCachingAllocator.cpp  XPUFunctions.cpp  XPUMacros.h
src/c10/nupu/impl/: XPUGuardImpl.h
src/comm/: xpu_aten.h
src/nupu/: Allocator.cpp  Copy.cpp  Device.cpp  Hooks.cpp  Ops.cpp
test/: test_compile.py  test_device.py  test_ops.py
test/cpp/: CMakeLists.txt  run.sh  test_ops.cpp
tools/torch-nupu-type-stubs/: pyproject.toml
tools/torch-nupu-type-stubs/torch-stubs/: __init__.pyi
tools/torch-nupu-type-stubs/torch-stubs/nupu/: __init__.pyi
torch_nupu/: CMakeLists.txt  __init__.py  _nupu.py  _nupu_codegen.py  _nupu_device_interface.py
torch_nupu/csrc/: Allocator.cpp  Device.cpp  Device.h  Hooks.cpp  Ops.cpp  _C.cpp  stub.c
torch_nupu/csrc/nupu/: Module.cpp  Module.h
torch_nupu/csrc/xpu/: Event.cpp  Module.cpp  Stream.cpp
yaml/: gen_nupu_functions.py  nupu_functions.yaml  torchgen.sh
yaml/native/: native_functions.yaml
