[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["torch_nupu"]
exclude = ["torch-xpu-ops", "pytorch"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["I", "UP"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
