[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_nupu"
dynamic = ["version"]
authors = [{ name = "torch-nupu" }]
description = "torch-nupu"
# target os: ubuntu-22.04+
requires-python = ">=3.10"
# NOTE: torch/triton require manual installation,
# do not add torch/triton into dependencies until supporting a local pypi
dependencies = []

[tool.setuptools_scm]
version_file = "torch_nupu/_version.py"
# only parse tag: `v*[0-9]*`, skip `nightly_**` and other tags
git_describe_command = "git describe --dirty --tags --long --match 'v*[0-9]*'"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["torch_nupu"]
exclude = ["torch-xpu-ops", "pytorch"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["I", "UP"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
